--- a/source/_posts/h5调试技巧.md
+++ b/source/_posts/h5调试技巧.md
@@ -5,44 +5,72 @@ tags:
 - h5
 ---
 
-## 使用内网ip进行真机调试
 
+## 前述
 >本文仅介绍非抓包之外的其它调试技巧
-### 我们已经习惯了模拟器进行调试，那为什么还需要进行本地真机调试？
+我们已经习惯了模拟器进行调试，那为什么还需要进行本地真机调试？
 举个例子：
 
-- `ios`环境下，收到短信验证码后，点击复制，在`h5`端会存在`bug`，剪切下来的验证码会重复两遍，例如收到的验证码为`123456`，但是实际复制后到剪切板的就变成了`123456123456`。
-
+- `ios`真机环境，我们收到短信验证码后，点击复制，`ios`系统层面会存在`bug`，剪切下来的验证码会被重复两遍，例如收到的验证码为`123456`，但是实际复制后到剪切板的就变成了`123456123456`。
 
 
 如果你对`「各端h5的坑」`了解不深。没有使用真机调试的方式，就无法在本地调试的阶段就发现潜在的问题。
 
+## 利用Chrome进行真机调试
+> 为什么真机测试是必要的？
 
-### 如何获取本地ip？
-如果你通过`npm run dev`启动本地`dev`环境，并且项目是基于`create-react-app`或`vue-cli`搭建项目的时候，由于封装的脚手架中配置了`webpack`相关的`plugin`，项目运行成功后会在命令行中有一些提示，不知你有没有注意过`terminal`提示里的第三行地址？
+### 首先分享一个坑
+一开始，为了实现一屏完全填充，考虑到移动端对`vw`，`vh`完美支持的情况下，我使用如下代码对宽高进行控制
+```css
+html, body {
+  height: 100vh;
+  width: 100vw;
+  background-color: blue;
+}
+```
+好的，让我们看看效果，在模拟器上，表现很完美，整整一屏的`blue`，这样看起来是没有问题的。
+<img src="https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/033457f5d860488e93198d121bc7d7a4~tplv-k3u1fbpfcp-zoom-1.image" width="40%" />
+
+### 真机调试步骤
+#### 准备项
+
+- 首先确保你有一根双向`Type-c`的线（😭 我没有，就把`mac`充电器的线接到手机上了）
+- 接下来，用线将手机和电脑连到一起
+- 打开手机的`Chrome`
+- 在完成电脑与手机之后，在电脑`Chrome`中输入以下地址：
+
+- `chrome://inspect/#devices`
 
 
-**`On Your Network: https://192.168.12.247:3000`**
-![本地项目ip地址.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4bf0c81808cd4a499ed25c65e5093c35~tplv-k3u1fbpfcp-zoom-1.image)
-如果你的项目没有使用`webpack`，或没有配置相关`plugins`，看不到`**On Your Network`**也没有关系
-可以通过如下方式获取内网`ip`
-```bash
-ifconfig | grep "inet " | grep -v 127.0.0.1
+#### 如何判断链接成功？
+如果你能看到`Chrome`识别出了你的移动设备，并且可以看到当前`Chrome`浏览历史页面列表，证明你链接成功了！
 
-# 执行结果
-# inet 192.168.12.247 netmask 0xfffffc00 broadcast 192.168.15.255
-# 这里 192.168.12.247 就是本机的内网ip
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/11db1b77daf54635a9c13390054529ef~tplv-k3u1fbpfcp-zoom-1.image)
+#### 开始真机调试
+接下来，我们可以在 **`chrome://inspect/#devices` 页打开一个我们想要进行调试的页面**
+**这里我们打开第一步：**`On Your Network`: [https://192.168.12.247:3000](https://192.168.12.247:3000)的页面
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/82607a4f98e84c9ea4819f2f02093ccd~tplv-k3u1fbpfcp-zoom-1.image)
+#### 回到一开始的问题，真机调试会有什么问题呢？
+可以看到，由于模拟器没有`address bar`，无法让我们发现问题，到了移动端之后，`100vh`实际会溢出，就出现滚动条了，并不是我们预期的效果。
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/eec016fce0394d509894a370253847a8~tplv-k3u1fbpfcp-zoom-1.image)
+
+有一些人提出如下解决方案，但是在实践中发现，安卓真机打开键盘会导致`body`元素高度减少，收起键盘之后，`body`高度不会变回去，导致原键盘区域为空白。
+```css
+/* 存在问题的方案 */
+html, body {
+  height: -moz-available;
+  height: fill-available;
+  height: -webkit-fill-available; /* 表示撑满可用空间（包括高度，宽度）*/
+}
 ```
 
-在真机`Chrome`中输入`https://192.168.12.247:3000`，可以看到手机后置摄像头的画面在页面中通过`video`成功渲染。
-对于这种例如需要使用后置摄像头的业务场景，我们只能使用真机进行实时调试（谁让`Mbp`自身不带后置摄像头呢？😭 ）
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/da3a50056ed54fcc809558ac474e1756~tplv-k3u1fbpfcp-zoom-1.image)
-
-
-### 在手机浏览器中手动输入地址，进行移动端调试很麻烦？
-这里提供一个`Chrome`插件，可以直接生成二维码
-[https://chrome.google.com/webstore/detail/qr-code-generator/afpbjjgbdimpioenaedcjgkaigggcdpp](https://chrome.google.com/webstore/detail/qr-code-generator/afpbjjgbdimpioenaedcjgkaigggcdpp)（需要科学上网） 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/cbeb31635ef0420293d963016e102646~tplv-k3u1fbpfcp-zoom-1.image)
+解决方法：
+```css
+/* 最终方案 */
+html, body {
+  min-height: 100%;
+}
+```
 
 
 ## 使用vConsole插件
@@ -74,62 +102,38 @@ plugins: [
    }),
 ]
 ```
-## 利用Chrome进行真机调试
 
----
-
-> 为什么真机测试是必要的？
-
-### 首先分享一个坑
-一开始，为了实现一屏完全填充，考虑到移动端对`vw`，`vh`完美支持的情况下，我使用如下代码对宽高进行控制
-```css
-html, body {
-  height: 100vh;
-  width: 100vw;
-  background-color: blue;
-}
-```
-好的，让我们看看效果，在模拟器上，表现很完美，整整一屏的`blue`，这样看起来是没有问题的。
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/033457f5d860488e93198d121bc7d7a4~tplv-k3u1fbpfcp-zoom-1.image)
-### 真机调试步骤
-#### 准备项
-
-- 首先确保你有一根双向`Type-c`的线（😭 我没有，就把`mac`充电器的线接到手机上了）
-- 接下来，用线将手机和电脑连到一起
-- 打开手机的`Chrome`
-- 在完成电脑与手机之后，在电脑`Chrome`中输入以下地址：
-
-- `chrome://inspect/#devices`
+## 使用内网ip进行真机调试
+### 如何获取本地ip？
+如果你通过`npm run dev`启动本地`dev`环境，并且项目是基于`create-react-app`或`vue-cli`搭建项目的时候，由于封装的脚手架中配置了`webpack`相关的`plugin`，项目运行成功后会在命令行中有一些提示，不知你有没有注意过`terminal`提示里的第三行地址？
 
 
-#### 如何判断链接成功？
-如果你能看到`Chrome`识别出了你的移动设备，并且可以看到当前`Chrome`浏览历史页面列表，证明你链接成功了！
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9c5689998def43c78c2c2153e0b03516~tplv-k3u1fbpfcp-zoom-1.image)
-#### 开始真机调试
-接下来，我们可以在 **`chrome://inspect/#devices` 页打开一个我们想要进行调试的页面**
-**这里我们打开第一步：**`On Your Network`: [https://192.168.12.247:3000](https://192.168.12.247:3000)的页面
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/82607a4f98e84c9ea4819f2f02093ccd~tplv-k3u1fbpfcp-zoom-1.image)
-#### 回到一开始的问题，真机调试会有什么问题呢？
-可以看到，由于模拟器没有`address bar`，无法让我们发现问题，到了移动端之后，`100vh`实际会溢出，就出现滚动条了，并不是我们预期的效果。
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/eec016fce0394d509894a370253847a8~tplv-k3u1fbpfcp-zoom-1.image)
+**`On Your Network: https://192.168.12.247:3000`**
 
-有一些人提出如下解决方案，但是在实践中发现，安卓真机打开键盘会导致`body`元素高度减少，收起键盘之后，`body`高度不会变回去，导致原键盘区域为空白。
-```css
-/* 存在问题的方案 */
-html, body {
-  height: -moz-available;
-  height: fill-available;
-  height: -webkit-fill-available; /* 表示撑满可用空间（包括高度，宽度）*/
-}
+<img src="https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/4bf0c81808cd4a499ed25c65e5093c35~tplv-k3u1fbpfcp-zoom-1.image" width="50%" />
+
+如果你的项目没有使用`webpack`，或没有配置相关`plugins`，看不到`**On Your Network`**也没有关系
+可以通过如下方式获取内网`ip`
+```bash
+ifconfig | grep "inet " | grep -v 127.0.0.1
+
+# 执行结果
+# inet 192.168.12.247 netmask 0xfffffc00 broadcast 192.168.15.255
+# 这里 192.168.12.247 就是本机的内网ip
 ```
 
-解决方法：
-```css
-/* 最终方案 */
-html, body {
-  min-height: 100%;
-}
-```
+在真机`Chrome`中输入`https://192.168.12.247:3000`，可以看到手机后置摄像头的画面在页面中通过`video`成功渲染。
+对于这种例如需要使用后置摄像头的业务场景，我们只能使用真机进行实时调试（谁让`Mbp`自身不带后置摄像头呢？😭 ）
+
+<img src="https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/da3a50056ed54fcc809558ac474e1756~tplv-k3u1fbpfcp-zoom-1.image" width="30%"/>
+
+
+
+### 在手机浏览器中手动输入地址，进行移动端调试很麻烦？
+这里提供一个`Chrome`插件，可以直接生成二维码
+[https://chrome.google.com/webstore/detail/qr-code-generator/afpbjjgbdimpioenaedcjgkaigggcdpp](https://chrome.google.com/webstore/detail/qr-code-generator/afpbjjgbdimpioenaedcjgkaigggcdpp)（需要科学上网） 
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/cbeb31635ef0420293d963016e102646~tplv-k3u1fbpfcp-zoom-1.image)
+
 
 
 ### FAQ
@@ -148,4 +152,4 @@ html, body {
 
 谢谢大家❤️
 ---
-我的分享到这里就结束了，如果还有什么疑问或者建议，欢迎一起交流，可以加我的微信号`actuallys`，分享、点赞、在看三连～！
+我的分享到这里就结束了，如果还有什么疑问或者建议，欢迎一起交流讨论，可以添加我的微信`actuallys`，分享、点赞、在看三连～！
